src/assets/styles/explorer.css
/* ... */
/*
    Fix Bulma / Oruga conflict

    In Bulma, rules:
        table td:not([align]), table th:not([align]) {
            text-align: inherit;
        }
        td:not([align]), th:not([align]) {
            text-align: inherit;
        }
    break Oruga table setting:
        o-table-column with position="right"
    This prevents right alignment because Bulma rules above take precedence over generated classes:
        o-table__td--right
        o-table__th--right
    (why?)

    Rules below restore the correct precedence.
 */
table.o-table {
    text-align: left;
}

table.o-table td.o-table__td--right,
table.o-table th.o-table__th--right {
    text-align: right;
}

table.o-table td.o-table__td--left,
table.o-table th.o-table__th--left {
    text-align: left;
}

/*  ============================================================================
    Explorer classes
*/

:root {
    background: var(--h-theme-page-background-color);
}

a {
    text-decoration: none;
    color: inherit;
}

.h-page-content {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin-left: 32px;
    margin-right: 32px;
}

.h-sub-section {
    background-color: var(--tab-background);
    border-radius: 8px;
    color: var(--text-primary);
    font-family: "Styrene A Web", sans-serif;
    font-weight: 700;
    font-size: 14px;
    max-width: fit-content;
    padding: 8px 8px;
}

.h-has-pill {
    background: var(--network-chip-color);
    border-radius: 32px;
    color: var(--chip-text-primary);
    font-family: "Styrene A Web", sans-serif;
    font-size: 10px;
    font-weight: 400;
    height: 20px;
    padding: 2px 8px;
}

.h-is-bold {
    font-weight: 600;
}

.has-text-grey {
    color: var(--text-secondary) !important;
}

.h-is-success {
    color: var(--status-success-color) !important;
}

.h-is-error {
    color: var(--status-error-color) !important;
}

.h-is-extra-text {
    color: var(--network-text-accent-color) !important;
}

/*  ========= THOSE ABOVE SHOULD STAY - THOSE BELOW NEED TRIAGE ==========
 */


.h-is-table-compact table.o-table {
    margin: 0;
}

.h-has-background-color {
    background: var(--h-theme-page-background-color);
}

.h-has-opacity-40 {
    opacity: 0.4;
}

.h-radio-button:hover {
    color: var(--network-theme-color);
}

.h-chooser-figure {
    width: 180px;
    height: 80px;
    text-align: center;
    padding: 8px;
    border: solid 0.5px transparent;
    border-radius: 6px;
}

.h-chooser-figure:hover:not(.selected) {
    border: solid 0.5px var(--network-theme-color);
    background-color: initial;
}

.h-chooser-figure:active:not(.selected) {
    border: solid 0.5px var(--network-theme-color);
    background-color: var(--background-primary);
}

.h-chooser-figure.selected {
    border: solid 1.5px var(--network-theme-color);
    background-color: initial;
}

.h-chooser-img {
    vertical-align: middle;
    width: 48px;
    height: 48px;
}

body {
    font-feature-settings: "liga", "kern";
}

.h-is-primary-title {
    font-style: normal;
    font-weight: 900;
    font-size: 30px;
    line-height: 36px;
}

@media (max-width: 1079px) {
    .h-is-primary-title {
        font-size: 24px;
        line-height: 29px;
    }
}

@media (max-width: 767px) {
    .h-is-primary-title {
        font-size: 16px;
        line-height: 19px;
    }
}

.h-is-secondary-title {
    font-style: normal;
    font-weight: 900;
    font-size: 22px;
    line-height: 26px;
}

@media (max-width: 767px) {
    .h-is-secondary-title {
        font-size: 16px;
        line-height: 19px;
    }
}

.h-is-primary-subtitle {
    font-style: normal;
    font-weight: 900;
    font-size: 16px;
    line-height: 19px;
}

.h-is-secondary-text {
    font-style: normal;
    font-weight: normal;
    font-size: 34px;
    line-height: 41px;
    letter-spacing: -0.05em;
}

@media (max-width: 1079px) {
    .h-is-secondary-text {
        font-size: 26px;
        line-height: 31px;
    }
}

@media (max-width: 767px) {
    .h-is-secondary-text {
        font-size: 18px;
        line-height: 22px;
    }
}

.h-is-tertiary-text {
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 22px;
}

@media (max-width: 767px) {
    .h-is-tertiary-text {
        font-size: 14px;
    }
}

.h-is-table-heading {
    font-style: normal;
    font-weight: bold;
    font-size: 11px;
    line-height: 13px;
}

.h-is-text-size-1 {
    font-style: normal;
    font-weight: normal;
    font-size: 9px;
    line-height: 11px;
}

.h-is-text-size-2 {
    font-style: normal;
    font-weight: normal;
    font-size: 10px;
    line-height: 12px;
}

.h-is-text-size-3 {
    font-style: normal;
    font-weight: normal;
    font-size: 11px;
    line-height: 13px;
}

.h-is-text-size-4 {
    font-style: normal;
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
}

.h-is-property-text {
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 17px;
}

.h-is-navbar-item {
    font-style: normal;
    font-weight: 300;
    font-size: 14px;
    line-height: 17px;
}

.h-is-mobile-navbar-item {
    font-size: 20px;
    line-height: 24px;
}

.h-is-dense {
    letter-spacing: -0.05em;
}

.h-is-smaller {
    font-size: 0.7em;
}

.h-is-label {
    color: #DDD;
    background: #383838;
    border: solid 0.5px var(--network-theme-color);
    border-radius: 4px;
    font-family: "Styrene A Web", sans-serif;
    font-weight: normal;
    font-size: 13px;
    line-height: 19px;
    padding: 3px 6px 3px;
    letter-spacing: normal;
    align-content: center;
}

.h-is-compact-label {
    color: #DDD;
    background: #383838;
    border: solid 0.5px var(--network-theme-color);
    border-radius: 4px;
    font-family: "Styrene A Web", sans-serif;
    font-weight: normal;
    font-size: 11px;
    line-height: 16px;
    padding: 1px 4px 2px;
    width: fit-content;
    letter-spacing: normal;
    align-content: center;
}

.is-numeric {
    font-variant-numeric: tabular-nums;
}
/* ... */

